# char-cli

./: Cargo.toml  README.md
src/: ascii.rs  main.rs
