[package]
name = "char-cli"
version = "0.1.0"
edition = "2021"
authors = ["darkiiiiiice <darkiiiiiice@gmail.com>"]
description ="an unicode escape tool"
categories = ["command-line-utilities"]
keywords = [
    "ascii",
    "unicode",
    "cli",
    "command",
]
readme = "README.md"
homepage = "https://github.com/Darkiiiiiice/char-cli"
repository = "https://github.com/Darkiiiiiice/char-cli.git"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
